# licheeRV-Nano-yolov5

./: CMakeLists.txt  README.md
